--- a/1.1-MVCetWebAPI/cours2/src/app/app.html
+++ b/1.1-MVCetWebAPI/cours2/src/app/app.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <!-- <input type="text" [(ngModel)]="userName" placeholder="Entrez votre nom" /> -->
+  <!-- [(ngModel)]="userName" Ajouter ngModel plus tard-->
+  <input type="text"  placeholder="Entrez votre nom" />
   <br />
   <button>Login</button>
 </div>
