--- a/6.2-Formatif/Intra_Formatif_A24-main/question3/src/app/app.component.html
+++ b/6.2-Formatif/Intra_Formatif_A24-main/question3/src/app/app.component.html
@@ -6,39 +6,55 @@
 
 <h1>Formulaire qui sert à rien</h1>
 <mat-card style="width: 700px; margin: auto; padding: 20px;">
-  <form >
+  <form [formGroup]="formGroup">
 
     <mat-form-field style="width: 100%">
-        <mat-label>Nom</mat-label>
-        <input matInput type="text" placeholder="Nom et prénom" name="name" >
-        
+      <mat-label>Nom</mat-label>
+      <!-- Ne pas oublier le formControlName lié avec le app.ts dans le formGroup -->
+      <input matInput type="text" placeholder="Nom et prénom" name="name" Ne pas oublier formControlName="name">
+      @if(formGroup.get('name')?.hasError('required')) {
+      <mat-error> Votre nom est <strong>requis</strong> </mat-error>
+      }
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
       <mat-label>Numéro de rue</mat-label>
-      <input matInput type="number" placeholder="5230" name="roadnumber">
-      
+      <input matInput type="number" placeholder="5230" name="roadnumber" formControlName="roadnumber">
+      @if(formGroup.get('roadnumber')?.hasError('required')) {
+      <mat-error> Votre numéro de rue est <strong>requis</strong> </mat-error>
+      }
+      @if(formGroup.get('roadnumber')?.hasError('min') || formGroup.get('roadnumber')?.hasError('max')) {
+      <mat-error> Votre numéro de rue doit être compris entre <strong>1000</strong> et <strong>9999</strong>
+      </mat-error>
+      }
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
-        <mat-label>Rue</mat-label>
-        <input matInput type="text" placeholder="Resther" name="rue">
+      <mat-label>Rue</mat-label>
+      <input matInput type="text" placeholder="Resther" name="rue">
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
       <mat-label>Code Postal</mat-label>
-      <input matInput type="text" placeholder="H2J8B2" name="postalcode">
-      
+      <input matInput type="text" placeholder="H2J8B2" name="postalcode" formControlName="postalCode">
+      @if(formGroup.get('postalCode')?.hasError('pattern')) {
+      <mat-error> Le code postal doit être au bon format </mat-error>
+      }
+
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
       <mat-label>Commentaire</mat-label>
-      <textarea matInput placeholder="Votre commentaire" name="comments"></textarea>
-      
+      <textarea matInput placeholder="Votre commentaire" name="comments" formControlName="comments"></textarea>
+      @if(formGroup.get('comments')?.hasError('minlength')) {
+      <mat-error> Votre commentaire doit contenir au moins 10 mots </mat-error>
+      }
+
     </mat-form-field>
 
     <mat-card-actions align="end">
-      <button  mat-raised-button color="primary" >Acheter</button>
+      <!-- Ájouter [disable]"!formGroup.valid" pour afficher le bouton seulement lorsque le formulaire est valide -->
+      <button mat-raised-button color="primary" [disabled]="!formGroup.valid">Acheter</button>
     </mat-card-actions>
   </form>
 </mat-card>
