--- a/14.2-Formatif/Final_Formatif_A24-main/ngAnimations/src/app/app.component.html
+++ b/14.2-Formatif/Final_Formatif_A24-main/ngAnimations/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div style="padding: 20px">
   <h1>Animation Angular</h1>
-  <button mat-raised-button color="accent">Animer une fois</button>
-  <button mat-raised-button color="accent">Animer en boucle</button>
-  <div class="square" style="background-color: red;"></div>
+  <button (click)="animated(false)" color="accent">Animer une fois</button>
+  <button (click)="animated(true)" mat-raised-button color="accent">Animer en boucle</button>
+  <div [@shake]="shakeAnim" class="square" style="background-color: red;"></div>
 
-  <div class="square" style="background-color: green;"></div>
+  <div [@bounce]="bouceAnim" class="square" style="background-color: green;"></div>
 
-  <div class="square" style="background-color: blue;"></div>
+  <div [@tada]="tadaAnim" class="square" style="background-color: blue;"></div>
 </div>
 <div style="padding: 20px">
   <h1>Animation CSS</h1>
